fix alignemtn

--- a/frontend/src/styles/account.scss
+++ b/frontend/src/styles/account.scss
@@ -157,7 +157,7 @@
       .rightText {
         color: var(--sub-color);
         font-size: 0.8em;
-        line-height: 1.25rem;
+        line-height: 1.25em;
       }
       .bar {
         height: 0.5rem;
